<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="account_blinkist_title">Email</string>
    <string name="account_facebook_title">Facebook</string>
    <string name="account_google_title">Google</string>
    <string name="account_settings_add_blinkist_account">Add email login</string>
    <string name="account_settings_category_accounts">Your Logins</string>
    <string name="account_settings_empty_error_title">Account info unavailable</string>
    <string name="action_highlight">Highlight</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audiobook_cover_publisher_description">Publisher description</string>
    <string name="audiobook_cover_show_less">Show less</string>
    <string name="audiobook_cover_show_more">Read more</string>
    <string name="audiobook_credits_settings_title">Audiobook Credits</string>
    <string name="copy">Copy</string>
    <string name="data_migration_error">"Whoops! That didn't work. To upgrade, you have to be connected to the internet."</string>
    <string name="data_migration_please_wait">Please hang tight while we update your local database!</string>
    <string name="delete_account_button_text">Delete account</string>
    <string name="delete_account_confirmation_label">Type \"DELETE\" to confirm</string>
    <string name="delete_account_confirmation_text">Please confirm below to delete your account. This action can not be undone.</string>
    <string name="delete_account_title">Delete your account</string>
    <string name="delete_account_will_description">"• Delete your account from Blinkist
• Remove all data associated with it"</string>
    <string name="delete_account_will_title">Deleting your account will:</string>
    <string name="delete_account_wont_description">• End a subscription already paid for via the %s</string>
    <string name="delete_account_wont_title">Deleting your account will NOT:</string>
    <string name="facebook_account">Facebook account</string>
    <string name="follow_us_on_facebook">Follow us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="help_center">Help Center</string>
    <string name="highlights_empty_message">Quotes, ideas, and words of wisdom… highlight them and they’ll be saved here for later!</string>
    <string name="highlights_empty_title">Just the highlights</string>
    <string name="library_empty_screen_audiobooks_cta">Find your first audiobook</string>
    <string name="library_empty_screen_audiobooks_message">Looks like there aren’t any audio books in your library yet</string>
    <string name="library_empty_screen_audiobooks_title">No audiobooks here!</string>
    <string name="link_facebook">https://www.facebook.com/blinkist</string>
    <string name="link_help_center">https://blinkist.zendesk.com/hc/</string>
    <string name="link_privacy_policy">https://www.blinkist.com/en/privacy/</string>
    <string name="link_tos">https://www.blinkist.com/en/tos/</string>
    <string name="link_twitter">https://twitter.com/blinkist</string>
    <string name="log_out">Log out</string>
    <string name="password">Password</string>
    <string name="pref_account">Account</string>
    <string name="pref_account_settings">AccountSettings</string>
    <string name="pref_add_blinkist_account">PrefAddBlinkistAccount</string>
    <string name="pref_audio">PrefAudioCategory</string>
    <string name="pref_audiobook_credits">PrefAudiobookCredits</string>
    <string name="pref_autodownload_audio">AutoDownloadAudio</string>
    <string name="pref_autoplay_recommendations">AutoPlayRecommendations</string>
    <string name="pref_blinkist_account">PrefBlinkistAccount</string>
    <string name="pref_clear_audio">ClearAudio</string>
    <string name="pref_content">PrefContentCategory</string>
    <string name="pref_dark_mode">DarkModePref</string>
    <string name="pref_dark_mode_system_value">system</string>
    <string name="pref_delete_account">DeleteAccount</string>
    <string name="pref_delete_audio_on_completion">DeleteAudioOnCompletion</string>
    <string name="pref_download_on_cellular">DownloadOnCellular</string>
    <string name="pref_facebook_account">PrefFacebookAccount</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_file_system">FileSystem</string>
    <string name="pref_google_account">PrefGoogleAccount</string>
    <string name="pref_info_unavailable">PrefInfoUnavailableAccount</string>
    <string name="pref_log_out_or_log_in">LogOut</string>
    <string name="pref_push_notifications">PushNotifications</string>
    <string name="pref_push_notifications_content">PushNotificationsContent</string>
    <string name="pref_push_notifications_content_switch">PushNotificationsContentSwitch</string>
    <string name="pref_push_notifications_daily">PushNotificationsDaily</string>
    <string name="pref_push_notifications_daily_switch">PushNotificationsDailySwitch</string>
    <string name="pref_push_notifications_daily_time">PushNotificationsDailyTime</string>
    <string name="pref_push_notifications_product">PushNotificationsProduct</string>
    <string name="pref_push_notifications_product_switch">PushNotificationsProductSwitch</string>
    <string name="pref_push_notifications_settings">PushNotificationsSettings</string>
    <string name="pref_push_notifications_shortcast_updates_switch">PushNotificationsShortcastUpdatesSwitch</string>
    <string name="pref_rate_google_play">PrefRateGooglePlay</string>
    <string name="pref_restore_purchases">RestorePurchases</string>
    <string name="pref_select_languages">SelectedLanguages</string>
    <string name="pref_subscription_action">SubscriptionAction</string>
    <string name="pref_subscription_info_settings">SubscriptionInfoSettings</string>
    <string name="pref_subscriptions">PrefManageSubscriptions</string>
    <string name="pref_sync_all">SyncAll</string>
    <string name="pref_version">Version</string>
    <string name="rate_settings_subtitle">Enjoying the app? Tell us all about it on Google Play</string>
    <string name="rate_settings_title">Rate Blinkist</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="select_all">Select All</string>
    <string name="setting_account_title">Change login details</string>
    <string name="setting_autodownload_audio_summary">Automatically download audio files on this device for Blinks that you add to your library</string>
    <string name="setting_autodownload_audio_title">Auto-download audio</string>
    <string name="setting_autoplay_recommendations_summary">Enjoy non-stop listening by playing similar titles when the current one ends.</string>
    <string name="setting_autoplay_recommendations_title">Autoplay</string>
    <string name="setting_clear_audio_summary">Remove downloaded files to free up space</string>
    <string name="setting_clear_audio_title">Clear downloaded audio</string>
    <string name="setting_delete_audio_on_completion_summary">Auto delete audio on completion</string>
    <string name="setting_delete_audio_on_completion_title">Auto-delete</string>
    <string name="setting_download_on_cellular_title">Download with mobile data</string>
    <string name="setting_file_system_title">Storage options for downloaded audio</string>
    <string name="setting_language_summary">Choose your reading language</string>
    <string name="setting_language_title">Language selection</string>
    <string name="setting_privacy_policy">Privacy policy</string>
    <string name="setting_push_notifications_content_category">Recommendations</string>
    <string name="setting_push_notifications_content_summary">Get notified about titles you might like</string>
    <string name="setting_push_notifications_content_title">Suggested Titles</string>
    <string name="setting_push_notifications_daily_category">Habit Building</string>
    <string name="setting_push_notifications_daily_summary">Get a reminder about your daily recommendation</string>
    <string name="setting_push_notifications_daily_time_summary">Set a time that fits you</string>
    <string name="setting_push_notifications_daily_time_title">Reminder Time</string>
    <string name="setting_push_notifications_daily_title">Daily Pick Reminders</string>
    <string name="setting_push_notifications_new_shortcast_episodes_summary">Get notified about new Shortcast episodes you might like</string>
    <string name="setting_push_notifications_new_shortcast_episodes_title">Shortcasts</string>
    <string name="setting_push_notifications_product_category">Updates</string>
    <string name="setting_push_notifications_product_summary">New features and improvements to your Blinkist app</string>
    <string name="setting_push_notifications_product_title">Product Updates</string>
    <string name="setting_push_notifications_settings">Push Notifications</string>
    <string name="setting_subscription_expiration">Membership</string>
    <string name="setting_tos">Terms of Service</string>
    <string name="setting_version">Version</string>
    <string name="settings_category_about">About</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_category_audio">Audio settings</string>
    <string name="settings_category_content">Content</string>
    <string name="settings_category_misc">Miscellaneous</string>
    <string name="settings_category_push_notifications">Notifications</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_delete_account_title">Delete account</string>
    <string name="settings_subscriptions">Manage subscription</string>
    <string name="settings_sync_everything">Synchronize</string>
    <string name="settings_sync_everything_summary">Synchronize all content to this device</string>
    <string name="share">Share</string>
    <string name="try_again">Try again</string>
    <string name="unlink_facebook">Unlink Facebook</string>
    <string name="unlink_facebook_not_available">"To unlink your facebook account, please first add an email login. This will ensure you don't lose your Blinkist data."</string>
    <string name="upgrade_now">Upgrade now</string>
    <string name="web_search">Web search</string>
</resources>