<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_textmarkers_empty" android:id="@id/action_highlight" android:orderInCategory="1" android:title="@string/action_highlight" app:showAsAction="ifRoom" />
    <item android:id="@id/action_share" android:orderInCategory="2" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@id/action_copy" android:orderInCategory="3" android:title="@string/copy" app:showAsAction="never" />
    <item android:id="@id/action_web_search" android:orderInCategory="4" android:title="@string/web_search" app:showAsAction="never" />
    <item android:id="@id/action_select_all" android:orderInCategory="5" android:title="@string/select_all" app:showAsAction="never" />
</menu>