<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/collapsingToolbarView" layout="@layout/view_collapsing_toolbar" />
    <com.blinkslabs.blinkist.android.uicore.widgets.BlinkistSwipeRefreshLayout android:id="@id/swipeRefreshLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recyclerView" android:paddingBottom="@dimen/spacing_8" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <com.blinkslabs.blinkist.android.uicore.widgets.EmptyScreenView android:id="@id/emptyView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cta="@string/library_empty_screen_audiobooks_cta" app:message="@string/library_empty_screen_audiobooks_message" app:title="@string/library_empty_screen_audiobooks_title" />
        </FrameLayout>
    </com.blinkslabs.blinkist.android.uicore.widgets.BlinkistSwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>