<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/titleTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_24" android:text="@string/delete_account_title" android:layout_marginStart="@dimen/spacing_24" android:layout_marginEnd="@dimen/spacing_24" app:layout_constraintTop_toTopOf="parent" style="@style/T36" />
            <ImageView android:id="@id/iconImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_32" android:src="@drawable/ic_warning_sign" android:layout_marginStart="@dimen/spacing_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/titleTextView" />
            <TextView android:textColor="@color/raspberry" android:id="@id/deletingWillTitleTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete_account_will_title" android:layout_marginStart="@dimen/spacing_16" android:layout_marginEnd="@dimen/spacing_24" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iconImageView" app:layout_constraintTop_toTopOf="@id/iconImageView" style="@style/T16Primary" />
            <TextView android:id="@id/deletingWillDescriptionTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete_account_will_description" app:layout_constraintEnd_toEndOf="@id/deletingWillTitleTextView" app:layout_constraintStart_toStartOf="@id/deletingWillTitleTextView" app:layout_constraintTop_toBottomOf="@id/deletingWillTitleTextView" style="@style/P16" />
            <TextView android:textColor="@color/raspberry" android:id="@id/deletingWontTitleTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_24" android:text="@string/delete_account_wont_title" app:layout_constraintEnd_toEndOf="@id/deletingWillDescriptionTextView" app:layout_constraintStart_toStartOf="@id/deletingWillDescriptionTextView" app:layout_constraintTop_toBottomOf="@id/deletingWillDescriptionTextView" style="@style/T16Primary" />
            <TextView android:id="@id/deletingWontDescriptionTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete_account_wont_description" app:layout_constraintEnd_toEndOf="@id/deletingWontTitleTextView" app:layout_constraintStart_toStartOf="@id/deletingWontTitleTextView" app:layout_constraintTop_toBottomOf="@id/deletingWontTitleTextView" style="@style/P16" />
            <View android:id="@id/separatorView" android:background="@color/lightest_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/spacing_32" android:layout_marginStart="@dimen/spacing_24" android:layout_marginEnd="@dimen/spacing_24" app:layout_constraintTop_toBottomOf="@id/deletingWontDescriptionTextView" />
            <TextView android:id="@id/confirmationTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_32" android:text="@string/delete_account_confirmation_text" android:layout_marginStart="@dimen/spacing_24" android:layout_marginEnd="@dimen/spacing_24" app:layout_constraintTop_toBottomOf="@id/separatorView" style="@style/P16" />
            <com.blinkslabs.blinkist.android.uicore.uicomponents.TextInputView android:id="@id/deleteConfirmationTextInputView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_16" android:selectAllOnFocus="true" android:inputType="text" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/spacing_24" android:layout_marginEnd="@dimen/spacing_24" android:autofillHints="@string/password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/confirmationTextView" app:title="@string/delete_account_confirmation_label" />
            <Button android:id="@id/deleteButton" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_32" android:text="@string/delete_account_button_text" android:layout_marginStart="@dimen/spacing_24" android:layout_marginEnd="@dimen/spacing_24" app:layout_constraintTop_toBottomOf="@id/deleteConfirmationTextInputView" style="@style/DangerButtonWidget" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>