<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/facebook_account" />
    <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:id="@id/txtEmail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="36.0dip" android:drawablePadding="12.0dip" android:drawableStart="@drawable/facebook_icon_blue" />
    <Button android:enabled="false" android:id="@id/btnUnlinkFacebook" android:text="@string/unlink_facebook" android:fontFamily="@font/cera_pro_medium" style="@style/ButtonPositiveWidget" />
    <TextView android:id="@id/txtUnlinkNotAvailable" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/unlink_facebook_not_available" android:lineSpacingExtra="8.0dip" />
    <Button android:textSize="14.0sp" android:textColor="@color/blinkist_green" android:gravity="start|center|top" android:id="@id/btnAddBlinkistAccount" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/account_settings_add_blinkist_account" style="@style/LegacyButtonBorderlessWidget" />
</LinearLayout>