<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.blinkslabs.blinkist.android.uicore.widgets.MaxWidthMatchParentLinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:padding="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" app:fluentMaxWidth="400.0dip">
        <com.blinkslabs.blinkist.android.feature.welcome.components.RotatingGearsView android:id="@id/gearView" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:gravity="center_horizontal" android:id="@id/messageTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/data_migration_please_wait" android:lineSpacingMultiplier="@dimen/linespacing" style="@style/P16" />
        <TextView android:gravity="center_horizontal" android:id="@id/errorTextView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/data_migration_error" android:lineSpacingMultiplier="@dimen/linespacing" style="@style/P16" />
        <Button android:id="@id/tryAgainButton" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/try_again" style="@style/ButtonPositiveWidget" />
    </com.blinkslabs.blinkist.android.uicore.widgets.MaxWidthMatchParentLinearLayout>
</FrameLayout>